# rxn-standardization

./: .bumpversion.cfg  .travis.yml  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yaml
resources/: README.md  extract_catalysts.py  extract_pubchem.py  extract_tautomers_water.py  smiles_from_sdf.py
rxn-standardization/: .gitignore  README.md  pyproject.toml
rxn-standardization/src/chemical_compounds_standardization_with_language_models/: some_module.py
src/rxn_standardization/: __init__.py  utils.py
src/rxn_standardization/scripts/: __init__.py  process_csv.py  process_output.py  score_predictions.py  split_for_cv.py  standardization_file.csv
tests/: test_some_module.py  test_utils.py
