[metadata]
name = chemical_compounds_standardization_with_language_models
version = attr: chemical_compounds_standardization_with_language_models.__version__
description = Describe your project here.
author = IBM RXN team
author_email = rxn4chemistry@zurich.ibm.com
license = TODO
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    tqdm>=4.25.0

[options.packages.find]
where = src

[options.package_data]
chemical_compounds_standardization_with_language_models =
    py.typed

[options.extras_require]
dev =
    black>=22.3.0
    bump2version>=1.0.1
    flake8>=3.7.9
    isort>=5.10.1
    mypy>=0.910
    pytest>=5.3.4
    pytest-cov>=2.8.1
    types-setuptools>=57.4.14

[flake8]
extend-ignore = E203, E501
