[metadata]
name = rxn_standardization
version = attr: rxn_standardization.__version__
description = Describe your project here.
author = IBM RXN team
author_email = rxn4chemistry@zurich.ibm.com
license = TODO
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    tqdm>=4.25.0
    pandas>=0.23.3
    rxn-utils>=1.0.0
    rxn-chem-utils>=1.0.0
    rxn-metrics>=1.0.0
    rxn-opennmt-py>=1.1.1
    rxn-utils>=1.1.9
    rdkit

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	rxn-std-process-csv = rxn_standardization.scripts.process_csv:main
	rxn-std-score-predictions = rxn_standardization.scripts.score_predictions:main
	rxn-std-process-output = rxn_standardization.scripts.process_output:main

[options.package_data]
rxn_standardization =
    py.typed

[options.extras_require]
dev =
    black>=22.3.0
    bump2version>=1.0.1
    flake8>=3.7.9
    isort>=5.10.1
    mypy>=0.910
    pytest>=5.3.4
    pytest-cov>=2.8.1
    types-setuptools>=57.4.14

[flake8]
extend-ignore = E203, E501
